# xtensors

./: .readthedocs.yaml  README.rst  pyproject.toml  setup.cfg
docs/source/: api.rst  broadcast.rst  conf.py  index.rst
docs/source/api/: argfunc.rst  binops.rst  broadcast.rst  broadcast_template.rst  typing.rst  ufuncs.rst
src/xtensor/: __init__.py
src/xtensor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xtensor/base/: __init__.py  _reduc.py  _reduc_2to1.py
src/xtensor/functionals/: __init__.py  base.py  reductions.py
src/xtensors/: __init__.py  version.py
src/xtensors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xtensors/__typing/: __init__.py  _indices.py  _tensors.py
src/xtensors/__unify/: __init__.py  _unify.py
src/xtensors/base/: __init__.py  _arg.py  _args.py  _binary_op.py  _coords.py  _misc.py  _names.py  _reduc.py  _reduc_2to1.py  _reduc_single_dim.py  _ufuncs.py
src/xtensors/base/_archive/: _broadcast.py  _misc.py  _reduc_2to1.py
src/xtensors/functionals/: __init__.py  base.py  reductions.py
src/xtensors/learn/: __init__.py  confmat.py
src/xtensors/numpy/: __init__.py  _args.py  _np.py
src/xtensors/tensor/: __init__.py  _base.py  _decors.py  _slice.py
src/xtensors/tensor/basic_utils/: __init__.py  _axes.py  _base.py  _coords.py  _dims.py  _generalize.py  _misc.py
src/xtensors/tensor/broadcast/: __init__.py  _broadcast.py  _dimcast.py  _template.py  _types.py
src/xtensors/typing/: __init__.py  _indices.py  _tensors.py
src/xtensors/unify/: __init__.py  _conv.py  _dims.py  _unify.py
(+2 files in other folders)
