[metadata]
name = xtensors
version = 0.1.6
author = Michael Wang
author_email = mike.wang96029@gmail.com
description = ND named tensor utilities
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/michael-960/xtensor
project_urls = 
    Bug Tracker = https://github.com/michael-960/xtensor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.20
	scipy >= 1.8.1

[options.packages.find]
where = src

